    references to pid file.
  * built-using-field-on-arch-all-package: Only fix for golang packages
    for now.
  * Drop use of pkginfo and just use email.message to parse PKG-INFO
    files.
  * Add support for retrieving upstream metadata from Cargo.toml.
  * license-file-listed-in-debian-copyright: Properly remove Files
    entries with just newlines.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 31 May 2020 02:21:51 +0000

lintian-brush (0.69) unstable; urgency=medium

  * debian-changelog-line-too-long: Only claim lintian tags were fixed
    when fixing long lines in the last changelog entry.
  * Only scan for 'DO NOT EDIT' in the header of control files. Closes:
    #961601
  * Fix handling of version increases when the existin version ends in
    something that is not a digit.
  * Handle MemoryError from fixers, rather than letting them crash all
    of lintian-brush. Closes: #961810
  * Add really basic package-has-no-description fixer. Certainty for
    this fixer is set to 'possible', so it is not run by default.
  * Add fixer for no-section-field and no-section-field-for-source.
  * Add fixer for no-maintainer-field.
  * Add fixer for no-priority-field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 31 May 2020 00:23:09 +0000

lintian-brush (0.68) unstable; urgency=medium

  * missing-build-dependency-for-dh_-command: Support checking Build-
    Depends-Indep and Build-Depends-Arch.
  * Properly break lines when adding changelog entries.
  * Improve detection of Gbp-Dch style packages, and output reasoning.
  * Only remove 'Team Upload.' lines in open changelog entries.
  * Print out both committer and changelog identity in --identity.
  * Cache the multi-arch hints in apply-multiarch-hints.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 25 May 2020 21:45:25 +0000

lintian-brush (0.67) unstable; urgency=medium

  * Fix regression when adding a new stanza to an existing changelog
    entry with a single author and more than one bullet point.
