@@ -8,4 +8,4 @@ add-log-mailing-address: .*
 /smg' -i debian/changelog
 
 echo "Drop no longer supported add-log-mailing-address setting from debian/changelog."
-echo "Fixed-Lintian-Tags: debian-changelog-file-contains-obsolete-user-emacs-setting"
+echo "Fixed-Lintian-Tags: debian-changelog-file-contains-obsolete-user-emacs-settings"
