@@ -2,4 +2,4 @@
 ignore_missing_imports = True
 
 [flake8]
-banned-modules = dulwich = USe breezy rather than dulwich directly
+banned-modules = dulwich = Use breezy rather than dulwich directly
