@@ -1,2 +1,2 @@
 Refer to common license file for Apache-2.0.
-Fixed-Lintian-Tags: copyright-does-not-refer-to-common-license-file, copyright-file-contains-full-apache-2-license, copyright-should-refer-to-common-license-file-for-apache-2
+Fixed-Lintian-Tags: copyright-does-not-refer-to-common-license-file, copyright-file-contains-full-apache-2-license, copyright-not-using-common-license-for-apache2
