@@ -1,2 +1,2 @@
 Move libmodule-build-perl from Build-Depends-Indep to Build-Depends.
-Fixed-Lintian-Tags: libmodule-build-perl-needs-to-be-in-build-depend
+Fixed-Lintian-Tags: libmodule-build-perl-needs-to-be-in-build-depends
