@@ -1,2 +1,2 @@
 Use correct machine-readable copyright file URI.
-Fixed-Lintian-Tags: out-of-date-copyright-format
+Fixed-Lintian-Tags: out-of-date-copyright-format-uri
