@@ -1,2 +1,2 @@
 Merge upstream signing key files.
-Fixed-Lintian-Tags: public-upstream-keys-in-multiple-locations.
+Fixed-Lintian-Tags: public-upstream-keys-in-multiple-locations
