@@ -1,2 +1,2 @@
 Replace /var/run with /run for the Service PIDFile.
-Fixed-Lintian-Tags: systemd-service-file-pidfile-refers-to-var-run
+Fixed-Lintian-Tags: systemd-service-file-refers-to-var-run
