@@ -9,6 +9,7 @@ lintian-brush (0.70) UNRELEASED; urgency=medium
   * Add support for retrieving upstream metadata from Cargo.toml.
   * license-file-listed-in-debian-copyright: Properly remove Files
     entries with just newlines.
+  * Update to follow renames of tags in lintian 2.80.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 31 May 2020 02:21:51 +0000
 
